--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,47 +1,42 @@
-.header{
+.header {
   background: #61305D;
-  text-align: center;
-  flex-shrink: 0; 
-  position: sticky;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-  z-index: 100%;
-
-
 }
+
 .header__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 5px 20px;
-    background-color: #61305D;
-    box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 5px 20px;
+  background-color: #61305D;
+  box-sizing: border-box;
 }
 
 .logo__img {
-   width: 45px;
-    height: auto;
-    border-radius: 100%;
+  width: 45px;
+  height: auto;
+  border-radius: 100%;
 
 }
 
 .header-container__nav {
-    display: flex;
-    gap: 15px;
+  display: flex;
+  gap: 15px;
 }
 
 .nav__link a {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #340d34;
-    color: #f6b679;
-    border-radius: 8px;
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #340d34;
+  color: #f6b679;
+  border-radius: 8px;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
 }
+
 .footstyle {
-  position: fixed;
   background: #61305d;
   color: #fff;
   padding: 0.5rem 0;
@@ -78,6 +73,7 @@
   height: 10% px;
   border-radius: 50%;
 }
+
 .footer-right {
   display: flex;
   align-items: center;
@@ -96,6 +92,7 @@
   margin: 0;
   padding: 0;
 }
+
 .footer-right li {
   display: flex;
   color: #e67c7c;
