--- a/styles/section.css
+++ b/styles/section.css
@@ -8,9 +8,14 @@ body {
   margin: 0;
   background-color: #e67c7c;
   color: #fff;
+}
+
+.wrapper {
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
+
 .section {
   width: 100%;
   display: flex;
